<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_disabled"
    tools:context=".MainActivity">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/button1"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:text="@string/button1"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/button2"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/button2"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/button3"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="197dp"
        android:layout_marginLeft="197dp"
        android:text="@string/button3"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/button4"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button4"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>