<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_disabled"
    tools:context=".Setting.User_main">

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/button1"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/button2"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="197dp"
        android:layout_marginLeft="197dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button3"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="99dp"
        android:layout_height="65dp"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button4"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="364dp"
        android:layout_height="130dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_rect"
        android:stateListAnimator="@null"
        android:enabled="false"
        android:text="@string/back1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="364dp"
        android:layout_height="130dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/rounded_rect"
        android:stateListAnimator="@null"
        android:text="@string/back1"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="364dp"
        android:layout_height="130dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="305dp"
        android:background="@drawable/rounded_rect"
        android:stateListAnimator="@null"
        android:text="@string/back1"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="364dp"
        android:layout_height="65dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_rect"
        android:text="@string/signout"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/username"
        android:textColor="@color/cblack"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@id/profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:text="@string/tools"
        android:textColor="@color/cblack"
        android:textStyle="bold"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/keyicon"
        app:layout_constraintTop_toTopOf="@id/keyicon" />

    <ImageView
        android:id="@+id/keyicon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/key"
        app:layout_constraintStart_toStartOf="@id/back2"
        app:layout_constraintTop_toTopOf="@id/back2" />

    <ImageButton
        android:id="@+id/wallet"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/wallet"
        app:layout_constraintStart_toStartOf="@id/back2"
        app:layout_constraintTop_toTopOf="@id/back2" />

    <ImageButton
        android:id="@+id/favorite"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/favorite"
        app:layout_constraintStart_toStartOf="@id/wallet"
        app:layout_constraintTop_toTopOf="@id/wallet" />

    <ImageView
        android:id="@+id/Setting"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/setting"
        app:layout_constraintStart_toStartOf="@id/back3"
        app:layout_constraintTop_toTopOf="@id/back3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="28dp"
        android:text="@string/setting"
        android:textColor="@color/cblack"
        android:textStyle="bold"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/Setting"
        app:layout_constraintTop_toTopOf="@id/Setting" />

    <ImageButton
        android:id="@+id/acc"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/account"
        app:layout_constraintStart_toStartOf="@id/back3"
        app:layout_constraintTop_toTopOf="@id/back3" />

    <ImageButton
        android:id="@+id/not"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/notification"
        app:layout_constraintStart_toStartOf="@id/acc"
        app:layout_constraintTop_toTopOf="@id/acc" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/help"
        app:layout_constraintStart_toStartOf="@id/not"
        app:layout_constraintTop_toTopOf="@id/not" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/information"
        app:layout_constraintStart_toStartOf="@id/help"
        app:layout_constraintTop_toTopOf="@id/help" />

</androidx.constraintlayout.widget.ConstraintLayout>